Fixed mobile bug where body moved down when cards moved. Set body's position to static on mobile.

--- a/style.css
+++ b/style.css
@@ -8,9 +8,9 @@
 
 body {
   position: relative;
-  top: 25%;
+  top: 50%;
   left: 50%;
-  transform: translate(-50%,-25%);
+  transform: translate(-50%,-50%);
   background-color: #00aaff;
   height: 100vh;
   width: 100vw;
@@ -172,7 +172,6 @@ button:focus {
 
 
 #results-page {
-    overflow: hidden;
     height: 100vh;
     width: 100vw;
 }
@@ -461,3 +460,10 @@ button:focus {
     }
 
 /*}*/
+
+@media screen and (max-width: 800px) {
+  body {
+    position: static;
+    transform: none;
+  }
+}
